fixed auction lists to recent first

--- a/Buyer/Base.lproj/LaunchScreen.storyboard
+++ b/Buyer/Base.lproj/LaunchScreen.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,27 +18,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="time_is_money" translatesAutoresizingMaskIntoConstraints="NO" id="1Af-Qs-kVC">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Yf5-Kh-mGD">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" red="0.93530068277310929" green="0.96760735544217691" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="page_1" translatesAutoresizingMaskIntoConstraints="NO" id="1Af-Qs-kVC">
                                 <rect key="frame" x="0.0" y="93" width="375" height="140"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="140" id="lxe-Sw-fTj"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Buy - Sell" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fra-dW-14w">
-                                <rect key="frame" x="16" y="323" width="343" height="28"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="hand_money" translatesAutoresizingMaskIntoConstraints="NO" id="sPz-vG-9du">
+                                <rect key="frame" x="155" y="305" width="64" height="56"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="1Af-Qs-kVC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="73" id="Bm8-x7-UUw"/>
+                            <constraint firstItem="Yf5-Kh-mGD" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="EOy-Er-gqe"/>
                             <constraint firstItem="1Af-Qs-kVC" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="RNI-kV-17r"/>
-                            <constraint firstItem="fra-dW-14w" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" id="Tuv-T8-0Ji"/>
-                            <constraint firstItem="fra-dW-14w" firstAttribute="top" secondItem="1Af-Qs-kVC" secondAttribute="bottom" constant="90" id="WBJ-FF-pFc"/>
-                            <constraint firstItem="fra-dW-14w" firstAttribute="centerX" secondItem="1Af-Qs-kVC" secondAttribute="centerX" id="j05-Oq-OKL"/>
+                            <constraint firstItem="Yf5-Kh-mGD" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="RpS-Xe-Sz8"/>
+                            <constraint firstItem="Yf5-Kh-mGD" firstAttribute="trailing" secondItem="1Af-Qs-kVC" secondAttribute="trailing" id="qKl-ig-0as"/>
                             <constraint firstAttribute="trailing" secondItem="1Af-Qs-kVC" secondAttribute="trailing" id="s2z-MQ-VSR"/>
+                            <constraint firstItem="Yf5-Kh-mGD" firstAttribute="leading" secondItem="1Af-Qs-kVC" secondAttribute="leading" id="ssS-gA-RL5"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -50,6 +52,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="time_is_money" width="995" height="353"/>
+        <image name="hand_money" width="39" height="30"/>
+        <image name="page_1" width="300" height="110"/>
     </resources>
 </document>
